# drempelbox

./: .dockerignore  .gitignore  BOM.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.cross  Makefile  README.md
.github/workflows/: rust.yml
ecad/: drempelbox.kicad_sym  ecad.kicad_pro  ecad.kicad_sch  sym-lib-table
mcad/: amp.FCStd  asm.20250120-112030.FCBak  asm.FCStd  assembly.FCStd  aux_pcb.FCStd  back.FCStd  bottom.FCStd  freecad_test.FCStd  front.FCStd  left.FCStd  mdplat-50-hole.20250120-103935.FCBak  mdplat-50-hole.FCStd  modplat-50-asm.20250120-101415.FCBak  modplat-50-asm.FCStd  modplat-50.20250120-094955.FCBak  modplat-50.FCStd  pin-6-9.20250120-095811.FCBak  pin-6-9.FCStd  right.FCStd  side_wall.FCStd  speaker.FCStd  speaker_passive.FCStd  top.FCStd
polkit/: 40-allow-shutdown-drempelbox.rules  42-network-drempelbox.rules
service/: drempelbox.service
src/: alsa.rs  amp.rs  button.rs  buttons.rs  file.rs  file_player.rs  led.rs  main.rs  ndef.rs  network.rs  ntag.rs  ntag215.rs  player.rs  server.rs  shutdown.rs  spotify_player.rs  tuple_windows.rs  volume_buttons.rs
