[package]
name = "drempelbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mfrc522 = { version = "0.6.0", features = ["std"] }
linux-embedded-hal = "0.3.2"
embedded-hal = "0.2.7"
itertools = "0.11.0"
bitflags = "2.4.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4.31"
axum = { version = "0.6.20", features = ["headers", "macros", "query"] }
futures = "0.3"
tokio-stream = { version = "0.1.14", features = ["sync"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
rodio = "0.17.1"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.4.1"
librespot = "0.4.2"
async-std = { version = "1.12.0", features = ["tokio1"] }
pin-project-lite = "0.2.13"
percent-encoding = "2.3.0"
